# null0-simplified

./: .gitignore  CMakeLists.txt  README.md  package.json
cart/: CMakeLists.txt  null0.h
cart/example/: main.c
host/: CMakeLists.txt
host/src/: fs.c  fs.h  host.c  host.h  host_emscripten.c  host_sound.c  host_wamr.c  main.c
test/: host.js  null0.test.js  null0.test.js.snapshot
webroot/: index.html  null0.js
