FIND_PACKAGE(physfs REQUIRED)
FIND_PACKAGE(pntr REQUIRED)

FILE(GLOB SRC_FILES src/*.c)

ADD_EXECUTABLE(${PROJECT_NAME} ${SRC_FILES})
TARGET_LINK_LIBRARIES(${PROJECT_NAME} physfs-static pntr)

IF (EMSCRIPTEN)
  SET(CMAKE_EXECUTABLE_SUFFIX ".mjs")
  TARGET_LINK_OPTIONS(${PROJECT_NAME} PRIVATE -sFORCE_FILESYSTEM -sEXPORTED_RUNTIME_METHODS=FS -sSTACK_SIZE=64MB)
ELSE()
  FIND_PACKAGE(wamr REQUIRED)
  TARGET_LINK_LIBRARIES(${PROJECT_NAME} vmlib)
ENDIF()
